# evalpro

./: .gitignore  README.md  pyproject.toml
evalpro/: utils.py
evalpro/design/: __init__.py
evalpro/design/aar/: __init__.py  aar.py  test_package.py
evalpro/design/dockq/: dockq.py  test_package.py
evalpro/design/folding/: base.py
evalpro/design/perplexity/: __init__.py  perplexity.py  test_package.py
evalpro/design/tmscore/: __init__.py  test_package.py  tmscore.py
